thay đổi trình quản lý package
